--- a/app/global.css
+++ b/app/global.css
@@ -3,3 +3,11 @@
 .ui.ribbon.label:after{
   display: none;
 }
+
+.clearing:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
