The user will need to download speedtest-cli; add a page to deal with that

--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,9 @@
 @import 'semantic-ui-css/semantic.min.css';
 
+html, body, #root{
+  height: 100%;
+}
+
 .ui.ribbon.label:after{
   display: none;
 }
