--- a/app/global.scss
+++ b/app/global.scss
@@ -1,4 +1,5 @@
 // @import 'semantic-ui-css/semantic.min.css';
+@import 'material-design-icons/iconfont/material-icons.css';
 
 * {
   box-sizing: border-box;
