Add primary color

--- a/app/global.scss
+++ b/app/global.scss
@@ -28,6 +28,10 @@ body,
   --text-color-2: rgba(255, 255, 255, 0.6);
   --text-color-3: rgba(255, 255, 255, 0.38);
 
+  --primary-color-1: rgba(248, 67, 111, 0.87);
+  --primary-color-2: rgba(248, 67, 111, 0.6);
+  --primary-color-3: rgba(248, 67, 111, 0.38);
+
   --unit: 16px;
 }
 
