--- a/app/components/Navbar/navbar.scss
+++ b/app/components/Navbar/navbar.scss
@@ -4,16 +4,16 @@
   background: var(--gray-6);
 
   a {
-    color: var(--text-color-1);
+    color: var(--primary-color-1);
   }
 
   a:hover,
   a:focus {
-    color: var(--text-color-2);
+    color: var(--primary-color-2);
   }
 
   a:active {
-    color: var(--text-color-3);
+    color: var(--primary-color-3);
   }
 
   .item {
@@ -31,13 +31,13 @@
     &:hover,
     &:focus {
       svg path {
-        fill: var(--text-color-2);
+        fill: var(--primary-color-2);
       }
     }
 
     &:active {
       svg path {
-        fill: var(--text-color-3);
+        fill: var(--primary-color-3);
       }
     }
 
@@ -46,7 +46,7 @@
       height: 32px;
 
       path {
-        fill: var(--text-color-1);
+        fill: var(--primary-color-1);
       }
     }
   }
