--- a/app/global.scss
+++ b/app/global.scss
@@ -1,5 +1,6 @@
 // @import 'semantic-ui-css/semantic.min.css';
 @import 'material-design-icons/iconfont/material-icons.css';
+@import 'purecss/build/base-min.css';
 
 * {
   box-sizing: border-box;
@@ -35,35 +36,34 @@ body,
   --unit: 16px;
 }
 
-:global {
-  .ui.ribbon.label:after {
-    display: none;
-  }
+.ui.ribbon.label:after {
+  display: none;
+}
 
-  .clearing:after {
-    content: '.';
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-  }
+.clearing:after {
+  content: '.';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
 
-  .ui.progress.general {
-    margin: 1em 0 0em;
-  }
+.ui.progress.general {
+  margin: 1em 0 0em;
+}
 
-  .layout {
-    display: grid;
-    grid-template-columns: minmax(auto, 64px) 1fr;
-    grid-auto-rows: minmax(100vh, auto);
-  }
+.layout {
+  display: grid;
+  grid-template-columns: minmax(auto, 64px) 1fr;
+  grid-auto-rows: minmax(100vh, auto);
+}
 
-  .content {
-    // background: #eee;
-  }
+.content {
+  // background: #eee;
+}
 
-  // screen reader
-  /*
+// screen reader
+/*
     Improved screen reader only CSS class
     @author Gaël Poupard
       @note Based on Yahoo!'s technique
@@ -92,21 +92,21 @@ body,
       @see https://csswizardry.com/2016/05/the-importance-of-important/
   */
 
-  .sr-only {
-    border: 0 !important;
-    clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
-    -webkit-clip-path: inset(50%) !important;
-    clip-path: inset(50%) !important; /* 2 */
-    height: 1px !important;
-    margin: -1px !important;
-    overflow: hidden !important;
-    padding: 0 !important;
-    position: absolute !important;
-    width: 1px !important;
-    white-space: nowrap !important; /* 3 */
-  }
+.sr-only {
+  border: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important; /* 1 */
+  -webkit-clip-path: inset(50%) !important;
+  clip-path: inset(50%) !important; /* 2 */
+  height: 1px !important;
+  margin: -1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  width: 1px !important;
+  white-space: nowrap !important; /* 3 */
+}
 
-  /*
+/*
     Use in conjunction with .sr-only to only display content when it's focused.
     @note Useful for skip links
     @see http://www.w3.org/TR/2013/NOTE-WCAG20-TECHS-20130905/G1
@@ -115,15 +115,14 @@ body,
       @author Sylvain Pigeard
       @see https://github.com/twbs/bootstrap/issues/20732
   */
-  .sr-only-focusable:focus,
-  .sr-only-focusable:active {
-    clip: auto !important;
-    -webkit-clip-path: none !important;
-    clip-path: none !important;
-    height: auto !important;
-    margin: auto !important;
-    overflow: visible !important;
-    width: auto !important;
-    white-space: normal !important;
-  }
+.sr-only-focusable:focus,
+.sr-only-focusable:active {
+  clip: auto !important;
+  -webkit-clip-path: none !important;
+  clip-path: none !important;
+  height: auto !important;
+  margin: auto !important;
+  overflow: visible !important;
+  width: auto !important;
+  white-space: normal !important;
 }
