--- a/app/components/CanvasAnimation/CanvasAnimation.module.scss
+++ b/app/components/CanvasAnimation/CanvasAnimation.module.scss
@@ -57,16 +57,22 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
 
+    &.ping {
+      opacity: 0;
+    }
+
     &.upload {
       transform: rotate(270deg) scaleY(0.9);
       animation-name: upload;
       font-size: 40px;
+      opacity: 0;
     }
 
     &.download {
       transform: rotate(90deg) scaleY(0.9);
       animation-name: download;
       font-size: 40px;
+      opacity: 0;
     }
   }
 }
@@ -89,4 +95,11 @@
   100% {
     margin-bottom: 25%;
   }
+}
+
+.canvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
