--- a/app/components/CanvasAnimation/CanvasAnimation.module.scss
+++ b/app/components/CanvasAnimation/CanvasAnimation.module.scss
@@ -50,12 +50,13 @@
     font-size: 50px;
     user-select: none;
     transition: transform 250ms cubic-bezier(0.66, 0.02, 0.22, 1);
-    transition-property: transform, margin, font-size;
+    transition-property: transform, margin, font-size, opacity;
 
     animation-duration: 250ms;
     animation-timing-function: cubic-bezier(0.66, 0.02, 0.22, 1);
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    color: var(--gray-7);
 
     &.ping {
       opacity: 0;
