--- a/app/global.scss
+++ b/app/global.scss
@@ -26,9 +26,9 @@ body,
   --gray-6: #{lighten(#181818, 10%)};
   --gray-7: #{lighten(#181818, 15%)};
 
-  --text-color-1: rgba(255, 255, 255, 0.87);
-  --text-color-2: rgba(255, 255, 255, 0.6);
-  --text-color-3: rgba(255, 255, 255, 0.38);
+  --text-color-1: #{darken(#ffffff, 28%)};
+  --text-color-2: #{darken(#ffffff, 50%)};
+  --text-color-3: #{darken(#ffffff, 77%)};
 
   --primary-color-1: rgba(255, 255, 255, 0.87);
   --primary-color-2: rgba(255, 255, 255, 0.6);
