Ping chart works with real data

--- a/app/components/Panel/Panel.module.scss
+++ b/app/components/Panel/Panel.module.scss
@@ -29,6 +29,7 @@
     display: flex;
     min-height: 128px;
     position: relative;
+    overflow: hidden;
 
     .number {
       margin-left: auto;
