--- a/app/components/Panel/Panel.module.scss
+++ b/app/components/Panel/Panel.module.scss
@@ -25,7 +25,7 @@
     transition: transform 250ms cubic-bezier(0.66, 0.02, 0.22, 1);
     transition-property: width;
 
-    svg{
+    > div{
       margin-top: auto;
     }
   }
