Panel charts: Clean up and add responsivenes

--- a/app/components/Panel/Panel.module.scss
+++ b/app/components/Panel/Panel.module.scss
@@ -25,8 +25,13 @@
     transition: transform 250ms cubic-bezier(0.66, 0.02, 0.22, 1);
     transition-property: width;
 
-    > div{
+    div{
       margin-top: auto;
+      height: 28px;
+    }
+
+    svg{
+      height: 28px;
     }
   }
 
